tf/edgeml/tools/SeeDot/Antlr/SeeDotParser.py
# Generated from SeeDot.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SeeDotParser ( Parser ):

    grammarFileName = "SeeDot.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "','", "']'", "'^T'", 
                     "'='", "':'", "'>='", "'?'", "'+'", "'-'", "'*'", "'|*|'", 
                     "'<*>'", "'#'", "'<+>'", "'<->'", "'relu'", "'exp'", 
                     "'argmax'", "'sgn'", "'tanh'", "'reshape'", "'maxpool'", 
                     "'$'", "'let'", "'in'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ADD", "SUB", 
                      "MUL", "SPARSEMUL", "MULCIR", "CONV", "ADDCIR", "SUBCIR", 
                      "RELU", "EXP", "ARGMAX", "SGN", "TANH", "Reshape", 
                      "Maxpool", "Sum", "Let", "In", "Id", "IntConst", "FloatConst", 
                      "WS", "LineComment" ]

    RULE_expr = 0
    RULE_addOp = 1
    RULE_binOp = 2
    RULE_specialFunc = 3
    RULE_intConstList = 4

    ruleNames =  [ "expr", "addOp", "binOp", "specialFunc", "intConstList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    ADD=11
    SUB=12
    MUL=13
    SPARSEMUL=14
    MULCIR=15
    CONV=16
    ADDCIR=17
    SUBCIR=18
    RELU=19
    EXP=20
    ARGMAX=21
    SGN=22
    TANH=23
    Reshape=24
    Maxpool=25
    Sum=26
    Let=27
    In=28
    Id=29
    IntConst=30
    FloatConst=31
    WS=32
    LineComment=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SeeDotParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Bop1Context(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeeDotParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeeDotParser.ExprContext,i)

        def binOp(self):
            return self.getTypedRuleContext(SeeDotParser.BinOpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBop1" ):
                return visitor.visitBop1(self)
            else:
                return visitor.visitChildren(self)


    class Bop2Context(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeeDotParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeeDotParser.ExprContext,i)

        def addOp(self):
            return self.getTypedRuleContext(SeeDotParser.AddOpContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBop2" ):
                return visitor.visitBop2(self)
            else:
                return visitor.visitChildren(self)


    class DeclContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def intConstList(self):
            return self.getTypedRuleContext(SeeDotParser.IntConstListContext,0)

        def In(self):
            return self.getToken(SeeDotParser.In, 0)
        def FloatConst(self, i:int=None):
            if i is None:
                return self.getTokens(SeeDotParser.FloatConst)
            else:
                return self.getToken(SeeDotParser.FloatConst, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)


    class IndexContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeeDotParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeeDotParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex" ):
                return visitor.visitIndex(self)
            else:
                return visitor.visitChildren(self)


    class SumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Sum(self):
            return self.getToken(SeeDotParser.Sum, 0)
        def Id(self):
            return self.getToken(SeeDotParser.Id, 0)
        def IntConst(self, i:int=None):
            if i is None:
                return self.getTokens(SeeDotParser.IntConst)
            else:
                return self.getToken(SeeDotParser.IntConst, i)
        def expr(self):
            return self.getTypedRuleContext(SeeDotParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum" ):
                return visitor.visitSum(self)
            else:
                return visitor.visitChildren(self)


    class ReshapeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Reshape(self):
            return self.getToken(SeeDotParser.Reshape, 0)
        def expr(self):
            return self.getTypedRuleContext(SeeDotParser.ExprContext,0)

        def intConstList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeeDotParser.IntConstListContext)
            else:
                return self.getTypedRuleContext(SeeDotParser.IntConstListContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReshape" ):
                return visitor.visitReshape(self)
            else:
                return visitor.visitChildren(self)


    class FloatContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FloatConst(self):
            return self.getToken(SeeDotParser.FloatConst, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat" ):
                return visitor.visitFloat(self)
            else:
                return visitor.visitChildren(self)


    class CondContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeeDotParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeeDotParser.ExprContext,i)

        def IntConst(self):
            return self.getToken(SeeDotParser.IntConst, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IntConst(self):
            return self.getToken(SeeDotParser.IntConst, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)


    class TranspContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SeeDotParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransp" ):
                return visitor.visitTransp(self)
            else:
                return visitor.visitChildren(self)


    class ParenContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SeeDotParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParen" ):
                return visitor.visitParen(self)
            else:
                return visitor.visitChildren(self)


    class FuncContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def specialFunc(self):
            return self.getTypedRuleContext(SeeDotParser.SpecialFuncContext,0)

        def expr(self):
            return self.getTypedRuleContext(SeeDotParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)


    class UopContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def addOp(self):
            return self.getTypedRuleContext(SeeDotParser.AddOpContext,0)

        def expr(self):
            return self.getTypedRuleContext(SeeDotParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUop" ):
                return visitor.visitUop(self)
            else:
                return visitor.visitChildren(self)


    class LetContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Let(self):
            return self.getToken(SeeDotParser.Let, 0)
        def Id(self):
            return self.getToken(SeeDotParser.Id, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeeDotParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeeDotParser.ExprContext,i)

        def In(self):
            return self.getToken(SeeDotParser.In, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet" ):
                return visitor.visitLet(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(SeeDotParser.Id, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


    class FuncCallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Id(self):
            return self.getToken(SeeDotParser.Id, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeeDotParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeeDotParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCall" ):
                return visitor.visitFuncCall(self)
            else:
                return visitor.visitChildren(self)


    class MaxpoolContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeeDotParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Maxpool(self):
            return self.getToken(SeeDotParser.Maxpool, 0)
        def expr(self):
            return self.getTypedRuleContext(SeeDotParser.ExprContext,0)

        def IntConst(self):
            return self.getToken(SeeDotParser.IntConst, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMaxpool" ):
                return visitor.visitMaxpool(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SeeDotParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = SeeDotParser.IntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 11
                self.match(SeeDotParser.IntConst)
                pass

            elif la_ == 2:
                localctx = SeeDotParser.FloatContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 12
                self.match(SeeDotParser.FloatConst)
                pass

            elif la_ == 3:
                localctx = SeeDotParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 13
                self.match(SeeDotParser.Id)
                pass

            elif la_ == 4:
                localctx = SeeDotParser.DeclContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 14
                self.match(SeeDotParser.T__0)
                self.state = 15
                self.intConstList()
                self.state = 16
                self.match(SeeDotParser.T__1)
                self.state = 17
                self.match(SeeDotParser.In)
                self.state = 18
                self.match(SeeDotParser.T__2)
                self.state = 19
                self.match(SeeDotParser.FloatConst)
                self.state = 20
                self.match(SeeDotParser.T__3)
                self.state = 21
                self.match(SeeDotParser.FloatConst)
                self.state = 22
                self.match(SeeDotParser.T__4)
                pass

            elif la_ == 5:
                localctx = SeeDotParser.ReshapeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 24
                self.match(SeeDotParser.Reshape)
                self.state = 25
                self.match(SeeDotParser.T__0)
                self.state = 26
                self.expr(0)
                self.state = 27
                self.match(SeeDotParser.T__3)
                self.state = 28
                self.match(SeeDotParser.T__0)
                self.state = 29
                self.intConstList()
                self.state = 30
                self.match(SeeDotParser.T__1)
                self.state = 31
                self.match(SeeDotParser.T__3)
                self.state = 32
                self.match(SeeDotParser.T__0)
                self.state = 33
                self.intConstList()
                self.state = 34
                self.match(SeeDotParser.T__1)
                self.state = 35
                self.match(SeeDotParser.T__1)
                pass

            elif la_ == 6:
                localctx = SeeDotParser.MaxpoolContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 37
                self.match(SeeDotParser.Maxpool)
                self.state = 38
                self.match(SeeDotParser.T__0)
                self.state = 39
                self.expr(0)
                self.state = 40
                self.match(SeeDotParser.T__3)
                self.state = 41
                self.match(SeeDotParser.IntConst)
                self.state = 42
                self.match(SeeDotParser.T__1)
                pass

            elif la_ == 7:
                localctx = SeeDotParser.FuncCallContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 44
                self.match(SeeDotParser.Id)
                self.state = 45
                self.match(SeeDotParser.T__0)
                self.state = 46
                self.expr(0)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SeeDotParser.T__3:
                    self.state = 47
                    self.match(SeeDotParser.T__3)
                    self.state = 48
                    self.expr(0)
                    self.state = 53
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 54
                self.match(SeeDotParser.T__1)
                pass

            elif la_ == 8:
                localctx = SeeDotParser.UopContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 56
                self.addOp()
                self.state = 57
                self.expr(8)
                pass

            elif la_ == 9:
                localctx = SeeDotParser.FuncContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 59
                self.specialFunc()
                self.state = 60
                self.match(SeeDotParser.T__0)
                self.state = 61
                self.expr(0)
                self.state = 62
                self.match(SeeDotParser.T__1)
                pass

            elif la_ == 10:
                localctx = SeeDotParser.SumContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 64
                self.match(SeeDotParser.Sum)
                self.state = 65
                self.match(SeeDotParser.T__0)
                self.state = 66
                self.match(SeeDotParser.Id)
                self.state = 67
                self.match(SeeDotParser.T__6)
                self.state = 68
                self.match(SeeDotParser.T__2)
                self.state = 69
                self.match(SeeDotParser.IntConst)
                self.state = 70
                self.match(SeeDotParser.T__7)
                self.state = 71
                self.match(SeeDotParser.IntConst)
                self.state = 72
                self.match(SeeDotParser.T__4)
                self.state = 73
                self.match(SeeDotParser.T__1)
                self.state = 74
                self.expr(4)
                pass

            elif la_ == 11:
                localctx = SeeDotParser.LetContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 75
                self.match(SeeDotParser.Let)
                self.state = 76
                self.match(SeeDotParser.Id)
                self.state = 77
                self.match(SeeDotParser.T__6)
                self.state = 78
                self.expr(0)
                self.state = 79
                self.match(SeeDotParser.In)
                self.state = 80
                self.expr(2)
                pass

            elif la_ == 12:
                localctx = SeeDotParser.ParenContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 82
                self.match(SeeDotParser.T__0)
                self.state = 83
                self.expr(0)
                self.state = 84
                self.match(SeeDotParser.T__1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 111
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = SeeDotParser.Bop1Context(self, SeeDotParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 88
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 89
                        self.binOp()
                        self.state = 90
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = SeeDotParser.Bop2Context(self, SeeDotParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 92
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 93
                        self.addOp()
                        self.state = 94
                        self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = SeeDotParser.CondContext(self, SeeDotParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 96
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 97
                        self.match(SeeDotParser.T__8)
                        self.state = 98
                        self.match(SeeDotParser.IntConst)
                        self.state = 99
                        self.match(SeeDotParser.T__9)
                        self.state = 100
                        self.expr(0)
                        self.state = 101
                        self.match(SeeDotParser.T__7)
                        self.state = 102
                        self.expr(4)
                        pass

                    elif la_ == 4:
                        localctx = SeeDotParser.TranspContext(self, SeeDotParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 104
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 105
                        self.match(SeeDotParser.T__5)
                        pass

                    elif la_ == 5:
                        localctx = SeeDotParser.IndexContext(self, SeeDotParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 106
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 107
                        self.match(SeeDotParser.T__2)
                        self.state = 108
                        self.expr(0)
                        self.state = 109
                        self.match(SeeDotParser.T__4)
                        pass

             
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class AddOpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(SeeDotParser.ADD, 0)

        def SUB(self):
            return self.getToken(SeeDotParser.SUB, 0)

        def getRuleIndex(self):
            return SeeDotParser.RULE_addOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddOp" ):
                return visitor.visitAddOp(self)
            else:
                return visitor.visitChildren(self)




    def addOp(self):

        localctx = SeeDotParser.AddOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_addOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not(_la==SeeDotParser.ADD or _la==SeeDotParser.SUB):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BinOpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUL(self):
            return self.getToken(SeeDotParser.MUL, 0)

        def SPARSEMUL(self):
            return self.getToken(SeeDotParser.SPARSEMUL, 0)

        def MULCIR(self):
            return self.getToken(SeeDotParser.MULCIR, 0)

        def CONV(self):
            return self.getToken(SeeDotParser.CONV, 0)

        def ADDCIR(self):
            return self.getToken(SeeDotParser.ADDCIR, 0)

        def SUBCIR(self):
            return self.getToken(SeeDotParser.SUBCIR, 0)

        def getRuleIndex(self):
            return SeeDotParser.RULE_binOp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinOp" ):
                return visitor.visitBinOp(self)
            else:
                return visitor.visitChildren(self)




    def binOp(self):

        localctx = SeeDotParser.BinOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_binOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SeeDotParser.MUL) | (1 << SeeDotParser.SPARSEMUL) | (1 << SeeDotParser.MULCIR) | (1 << SeeDotParser.CONV) | (1 << SeeDotParser.ADDCIR) | (1 << SeeDotParser.SUBCIR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SpecialFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RELU(self):
            return self.getToken(SeeDotParser.RELU, 0)

        def EXP(self):
            return self.getToken(SeeDotParser.EXP, 0)

        def ARGMAX(self):
            return self.getToken(SeeDotParser.ARGMAX, 0)

        def SGN(self):
            return self.getToken(SeeDotParser.SGN, 0)

        def TANH(self):
            return self.getToken(SeeDotParser.TANH, 0)

        def getRuleIndex(self):
            return SeeDotParser.RULE_specialFunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpecialFunc" ):
                return visitor.visitSpecialFunc(self)
            else:
                return visitor.visitChildren(self)




    def specialFunc(self):

        localctx = SeeDotParser.SpecialFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_specialFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SeeDotParser.RELU) | (1 << SeeDotParser.EXP) | (1 << SeeDotParser.ARGMAX) | (1 << SeeDotParser.SGN) | (1 << SeeDotParser.TANH))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntConstListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IntConst(self, i:int=None):
            if i is None:
                return self.getTokens(SeeDotParser.IntConst)
            else:
                return self.getToken(SeeDotParser.IntConst, i)

        def getRuleIndex(self):
            return SeeDotParser.RULE_intConstList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntConstList" ):
                return visitor.visitIntConstList(self)
            else:
                return visitor.visitChildren(self)




    def intConstList(self):

        localctx = SeeDotParser.IntConstListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_intConstList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SeeDotParser.IntConst)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SeeDotParser.T__3:
                self.state = 123
                self.match(SeeDotParser.T__3)
                self.state = 124
                self.match(SeeDotParser.IntConst)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[0] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 10)
         




